hphp/hack/test/typecheck/new_inference/eager_solve/graph.php.like_types.exp
File "graph.php", line 34, characters 21-29:
Invalid argument (Typing[4110])
File "graph.php", line 17, characters 19-22:
Expected Tkey
File "graph.php", line 17, characters 19-22:
Considering that this type argument is invariant with respect to Graph
File "graph.php", line 17, characters 27-34:
But got arraykey
